@@ -30,8 +30,7 @@ import org.neo4j.internal.kernel.api.IndexQuery.ExactPredicate;
 import org.neo4j.values.storable.Value;
 import org.neo4j.values.storable.Values;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.equalTo;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.neo4j.internal.helpers.collection.Iterators.array;
 import static org.neo4j.internal.kernel.api.IndexQuery.exact;
 
@@ -46,7 +45,7 @@ public class IndexEntryResourceTypesTest
     void shouldProduceBackwardsCompatibleId()
     {
         long id = ResourceIds.indexEntryResourceId( labelId, exact( propertyId, value ) );
-        assertThat( id, equalTo( 6676982443481287192L ) );
+        assertThat( id ).isEqualTo( 6676982443481287192L );
     }
 
     @Test
@@ -68,7 +67,7 @@ public class IndexEntryResourceTypesTest
                 ResourceIds.indexEntryResourceId( 2, array( pred1, pred2, pred3, pred4 ) ) );
 
         Set<Long> uniqueIds = Iterables.asSet( ids );
-        assertThat( ids.size(), equalTo( uniqueIds.size() ) );
+        assertThat( ids.size() ).isEqualTo( uniqueIds.size() );
     }
 
     @Test
@@ -95,7 +94,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new boolean[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new boolean[]{true} ) ) );
         hasher.hash( 42, array( exact( 1, new boolean[]{true, false} ) ) );
-        hasher.hash( 42, array( exact( 1, new Boolean( true ) ) ) );
+        hasher.hash( 42, array( exact( 1, Boolean.valueOf( true ) ) ) );
         hasher.hash( 42, array( exact( 1, new Boolean[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Boolean[]{true} ) ) );
         hasher.hash( 42, array( exact( 1, new Boolean[]{true, false} ) ) );
@@ -103,7 +102,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new byte[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new byte[]{1} ) ) );
         hasher.hash( 42, array( exact( 1, new byte[]{1, 2} ) ) );
-        hasher.hash( 42, array( exact( 1, Byte.valueOf( (byte) 1  ) ) ) );
+        hasher.hash( 42, array( exact( 1, Byte.valueOf( (byte) 1 ) ) ) );
         hasher.hash( 42, array( exact( 1, new Byte[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Byte[]{1} ) ) );
         hasher.hash( 42, array( exact( 1, new Byte[]{1, 2} ) ) );
@@ -119,7 +118,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new char[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new char[]{'a'} ) ) );
         hasher.hash( 42, array( exact( 1, new char[]{'a', 'b'} ) ) );
-        hasher.hash( 42, array( exact( 1, new Character( 'a' ) ) ) );
+        hasher.hash( 42, array( exact( 1, Character.valueOf( 'a' ) ) ) );
         hasher.hash( 42, array( exact( 1, new Character[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Character[]{'a'} ) ) );
         hasher.hash( 42, array( exact( 1, new Character[]{'a', 'b'} ) ) );
@@ -127,7 +126,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new float[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new float[]{1} ) ) );
         hasher.hash( 42, array( exact( 1, new float[]{1, 2} ) ) );
-        hasher.hash( 42, array( exact( 1, new Float( (float) 1 ) ) ) );
+        hasher.hash( 42, array( exact( 1, Float.valueOf( 1 ) ) ) );
         hasher.hash( 42, array( exact( 1, new Float[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Float[]{1.0f} ) ) );
         hasher.hash( 42, array( exact( 1, new Float[]{1.0f, 2.0f} ) ) );
@@ -151,7 +150,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new double[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new double[]{1} ) ) );
         hasher.hash( 42, array( exact( 1, new double[]{1, 2} ) ) );
-        hasher.hash( 42, array( exact( 1, new Double( 1.0 ) ) ) );
+        hasher.hash( 42, array( exact( 1, Double.valueOf( 1.0 ) ) ) );
         hasher.hash( 42, array( exact( 1, new Double[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Double[]{1.0} ) ) );
         hasher.hash( 42, array( exact( 1, new Double[]{1.0, 2.0} ) ) );
@@ -166,7 +165,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new boolean[]{} ), exact( ~1, new boolean[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new boolean[]{true} ), exact( ~1, new boolean[]{true} ) ) );
         hasher.hash( 42, array( exact( 1, new boolean[]{true, false} ), exact( ~1, new boolean[]{true, false} ) ) );
-        hasher.hash( 42, array( exact( 1, new Boolean( true ) ), exact( ~1, new Boolean( true ) ) ) );
+        hasher.hash( 42, array( exact( 1, Boolean.valueOf( true ) ), exact( ~1, Boolean.valueOf( true ) ) ) );
         hasher.hash( 42, array( exact( 1, new Boolean[]{} ), exact( ~1, new Boolean[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Boolean[]{true} ), exact( ~1, new Boolean[]{true} ) ) );
         hasher.hash( 42, array( exact( 1, new Boolean[]{true, false} ), exact( ~1, new Boolean[]{true, false} ) ) );
@@ -190,7 +189,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new char[]{} ), exact( ~1, new char[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new char[]{'a'} ), exact( ~1, new char[]{'a'} ) ) );
         hasher.hash( 42, array( exact( 1, new char[]{'a', 'b'} ), exact( ~1, new char[]{'a', 'b'} ) ) );
-        hasher.hash( 42, array( exact( 1, new Character( 'a' ) ), exact( ~1, new Character( 'a' ) ) ) );
+        hasher.hash( 42, array( exact( 1, Character.valueOf( 'a' ) ), exact( ~1, Character.valueOf( 'a' ) ) ) );
         hasher.hash( 42, array( exact( 1, new Character[]{} ), exact( ~1, new Character[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Character[]{'a'} ), exact( ~1, new Character[]{'a'} ) ) );
         hasher.hash( 42, array( exact( 1, new Character[]{'a', 'b'} ), exact( ~1, new Character[]{'a', 'b'} ) ) );
@@ -198,7 +197,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new float[]{} ), exact( ~1, new float[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new float[]{1} ), exact( ~1, new float[]{1} ) ) );
         hasher.hash( 42, array( exact( 1, new float[]{1, 2} ), exact( ~1, new float[]{1, 2} ) ) );
-        hasher.hash( 42, array( exact( 1, new Float( (float) 1 ) ), exact( ~1, new Float( (float) 1 ) ) ) );
+        hasher.hash( 42, array( exact( 1, Float.valueOf( 1 ) ), exact( ~1, Float.valueOf( 1 ) ) ) );
         hasher.hash( 42, array( exact( 1, new Float[]{} ), exact( ~1, new Float[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Float[]{1.0f} ), exact( ~1, new Float[]{1.0f} ) ) );
         hasher.hash( 42, array( exact( 1, new Float[]{1.0f, 2.0f} ), exact( ~1, new Float[]{1.0f, 2.0f} ) ) );
@@ -222,7 +221,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new double[]{} ), exact( ~1, new double[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new double[]{1} ), exact( ~1, new double[]{1} ) ) );
         hasher.hash( 42, array( exact( 1, new double[]{1, 2} ), exact( ~1, new double[]{1, 2} ) ) );
-        hasher.hash( 42, array( exact( 1, new Double( 1.0 ) ), exact( ~1, new Double( 1.0 ) ) ) );
+        hasher.hash( 42, array( exact( 1, Double.valueOf( 1.0 ) ), exact( ~1, Double.valueOf( 1.0 ) ) ) );
         hasher.hash( 42, array( exact( 1, new Double[]{} ), exact( ~1, new Double[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Double[]{1.0} ), exact( ~1, new Double[]{1.0} ) ) );
         hasher.hash( 42, array( exact( 1, new Double[]{1.0, 2.0} ), exact( ~1, new Double[]{1.0, 2.0} ) ) );
